--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,11 +1,24 @@
+
+
+div{
+    display: flex;
+    flex-direction: column;
+        /* background-color: rgb(230, 240, 235); */
+        /* padding: 1px; */
+        align-items: center;
+        justify-content: center;
+}
+
 .login{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     height: 30%;
-    /* width: 30%; */
-    padding: 100px;
+    width: 30%;
+    padding: 10px;
     border-radius: 20px;
-    background-color: rgb(230, 240, 235);
-    opacity: 0.6;
+    background-color: rgb(230, 240, 235,0.4);
+    /* opacity: 0.6; */
+    align-items: center;
+    align-content: center;
 }
 input{
     color: white;
@@ -14,12 +27,13 @@ input{
     
 }
 h2{
-  color: rgb(11, 10, 10);
+  color: rgb(243, 241, 241);
 }
 
 button{
-    width: 50%;
+    width: 20%;
     height: 15%;
+    border: none;
 }
 
 a{
@@ -32,8 +46,12 @@ a:hover{
   color: purple;
 }
 button:hover{
-    background-color: red;
+    background-color: rgb(0, 255, 76);
     color: white;
-    border: none;
-    border-radius: 2px;
+    /* border: black; */
+    /* border-radius: 2px; */
+    cursor: pointer;
+}
+i{
+    color: white;
 }
