--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,27 +1,32 @@
-<form (ngSubmit)="login()">
-    
-        <div>
-            <h1 style="color: white; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">{{aim}}</h1>
-        </div>
+    <form (ngSubmit)="login()" [formGroup]="loginForm" >
         
-    <div>
-            
-            <div class="login">
-                <i class="fa-regular fa-user fa-3x"></i>
-        
-                <h2>Hello, User</h2>
-                <!-- <input #acno type="text" [placeholder]="data" id="aid" name="acn"> <br> <br> -->
-                <!-- <input (change)="pswChange($event)" type="password" placeholder="Password" id="pid" name="psw"> <br> <br>  -->
-                 <input [(ngModel)]="acno" type="text" [placeholder]="data" id="aid" name="acn"> <br> <br> 
-        
-                <!-- <input #psw type="password" placeholder="Password" id="pid" name="psw"> <br> <br>  -->
-                 <input [(ngModel)]="psw" type="password" placeholder="Password" id="pid" name="psw"> <br> <br> 
-        
-        
-        
-                <button type="submit">Login</button> <br> 
-         <p>Dont have an account?<a routerLink="register"> Register</a></p>
-        
+            <div>
+                <h1 style="color: white; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">{{aim}}</h1>
             </div>
-    </div>
-</form>
+            
+        <div>
+                
+                <div class="login">
+                    <i class="fa-regular fa-user fa-3x"></i>
+            
+                    <h2>Hello, User</h2>
+                    <!-- <input #acno type="text" [placeholder]="data" id="aid" name="acn"> <br> <br> -->
+                    <!-- <input (change)="pswChange($event)" type="password" placeholder="Password" id="pid" name="psw"> <br> <br>  -->
+                     <input formControlName="acno" type="text" [placeholder]="data" id="aid" name="acn"> <br>
+                     <div *ngIf="this.loginForm.get('acno')?.errors&&this.loginForm.get('acno')?.touched"><p style="color: red;">incorrect account number</p></div>
+
+            
+                    <!-- <input #psw type="password" placeholder="Password" id="pid" name="psw"> <br> <br>  -->
+                     <input formControlName="psw" type="password" placeholder="Password" id="pid" name="psw"> <br>
+                     <div *ngIf="this.loginForm.get('psw')?.errors&&this.loginForm.get('psw')?.touched"><p style="color: red;">incorrect password</p></div>
+
+            
+            
+            
+                    <button type="submit">Login</button> <br> 
+             <p>Dont have an account?<a routerLink="register"> Register</a></p>
+            
+                </div>
+        </div>
+    </form>
+
