--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,10 +1,10 @@
-<div class="a">
+<!-- <div class="a">
+
 
       <form (ngSubmit)="register()" [formGroup]=" registerForm">
             <div>
                   <div class="register">
                         <h1>Registration form</h1> <br> <br>
-                        <!-- <label for="u1"> </label>  -->
                         <input type="text" name="acno" formControlName="acno" id="a1" placeholder="Account number"> 
                         <br>
                         
@@ -12,14 +12,46 @@
                         
                         <input type="text" name="uname" formControlName="uname" id="u1" placeholder="username"> <br>
                         <br>
-                        <div *ngIf="this.registerForm.get('uname')?.errors && this.registerForm.get('acno')?.touched" ><p >incorrect account number</p></div>
+                        <div *ngIf="this.registerForm.get('uname')?.errors && this.registerForm.get('uname')?.touched" ><p >incorrect account number</p></div>
 
                         <input type="password" formControlName="password" id="p1" placeholder="Password"> <br><br>
-                        <div *ngIf="this.registerForm.get('password')?.errors && this.registerForm.get('acno')?.touched" ><p >incorrect account number</p></div>
+                        <div *ngIf="this.registerForm.get('password')?.errors && this.registerForm.get('password')?.touched" ><p >incorrect account number</p>
+                        </div> 
 
                         <button type="submit">register</button>
                   </div>
 
             </div>
       </form>
-</div>
+</div> -->
+
+
+<div class="login">
+      <div class="loginContent">
+          <form (ngSubmit)="register()" [formGroup]="registerForm">
+          <h1>Register</h1>
+          <input type="text" placeholder="username" id="acid" name="uname" formControlName="uname">
+  
+          <br>
+          <div *ngIf="this.registerForm.get('uname')?.errors&&this.registerForm.get('uname')?.touched">
+              <p style="color: red;">invalid username</p>
+          </div>
+          <br>
+          <input type="text" placeholder="Account number" id="pid" name="acno" formControlName="acno" >
+          <br>
+          <div *ngIf="this.registerForm.get('acno')?.errors&&this.registerForm.get('acno')?.touched">
+              <p style="color: red;">invalid Account number</p>
+          </div>
+          <br>
+          <input type="password" placeholder="password" id="psw" name="psw" formControlName="psw" >
+          <br>
+          <div *ngIf="this.registerForm.get('psw')?.errors&&this.registerForm.get('psw')?.touched">
+              <p style="color: red;">invalid password</p>
+          </div>
+          <br>
+  
+          <button class="loginButton"  type="submit" >Sign up</button>
+          <br>
+      </form>
+      </div>
+  </div>
