--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -7,7 +7,6 @@
     margin-left: 30%;
     margin-top: 5%;
     /* background-color: white; */
-    /* padding: 40px; */
 }
 h1{
     color: white;
@@ -38,4 +37,53 @@ button:hover{
     cursor: pointer;
     background-color: green;
     color: white;
+}
+
+/* ........................... */
+
+.login{
+    /* background-color: green; */
+
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    /* height: 100vh;
+    width: 100%; */
+    
+}
+.loginContent{
+    height: 500px;
+    width: 400px;
+    background-color: rgb(230, 240, 235,0.4);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 40px;
+    opacity: .8;
+}
+input{
+    height: 25px;
+    width: 240px;
+}
+.loginButton{
+    width: 110px;
+    height: 30px;
+    border-radius: 8px;
+
+}
+h1{
+    font-size: 40px;
+    font-weight: bold;
+    color: white
+    
+}
+.loginButton:hover{
+    cursor: pointer;
+    transition: all .7s;
+    background-color: green;
+}
+.aim{
+    text-align: center;
+    margin-top: 8%;
 }
