--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,20 +2,24 @@
    <a href="/transaction">view trasaction history</a> -->
 
 
- 
+
 <div class="dashboard">
     <div>
         <h1 style="color: white;">Welcome {{user}}</h1>
-        <h5 style="color: white;" >{{dateandtime | date : 'fullDate'}}</h5>
+        <h5 style="color: white;">{{dateandtime | date : 'fullDate'}}</h5>
         <a routerLink="/transaction">view trasaction history</a>
     </div>
 
 
-  <div class="dlt">
-    <app-deleteconfirm [item]="acno"  ></app-deleteconfirm>
-</div>
+    <button class="c" type="submit" (click)="logout()">Logout</button>
+    <button class="d" (click)="Deleteconfirm()">Delete</button>
 
-    <form [ngClass]="acno? 'style':'' "  (ngSubmit)="deposit()" [formGroup]="depositForm">
+
+    <div class="dlt">
+        <app-deleteconfirm (onCancel)="oncancel()" [item]="acno"></app-deleteconfirm>
+    </div>
+
+    <form [ngClass]="acno? 'style':'' " (ngSubmit)="deposit()" [formGroup]="depositForm">
         <div class="deposit">
             <h2>Deposit Form</h2>
 
@@ -40,10 +44,10 @@
         </div>
     </form>
 
-    <form [ngClass]="acno? 'style':'' "   (ngSubmit)="withdraw()" [formGroup]="withdrawForm">
+    <form [ngClass]="acno? 'style':'' " (ngSubmit)="withdraw()" [formGroup]="withdrawForm">
         <div class="withdraw">
             <h2>Withdrawal Form</h2>
-            <input formControlName="a1" name="a1" type="text" id="a1" placeholder="Account number"> <br> 
+            <input formControlName="a1" name="a1" type="text" id="a1" placeholder="Account number"> <br>
             <div *ngIf="this.withdrawForm.get('a1')?.errors && this.withdrawForm.get('a1')?.touched">
                 <p style="color: red;">incorrect account number</p>
             </div>
@@ -61,7 +65,7 @@
 
             <button type="submit">Withdraw</button>
 
-            <button  class="c" type="submit" (click)="logout()">Logout</button>
+
 
         </div>
 
@@ -70,7 +74,6 @@
     </form>
 
 
+
+
 </div>
-<button class="d" (click)="Deleteconfirm()" >Delete</button>
-
-
