--- a/src/app/deleteconfirm/deleteconfirm.component.css
+++ b/src/app/deleteconfirm/deleteconfirm.component.css
@@ -1,3 +1,12 @@
+
+.delete{
+    display: flex;
+    flex-direction: column;
+    /* margin-top: 50%; */
+    /* margin-left: 20%; */
+
+}
+
 button{
     margin: 5px;
   
