--- a/src/app/deleteconfirm/deleteconfirm.component.html
+++ b/src/app/deleteconfirm/deleteconfirm.component.html
@@ -1,4 +1,6 @@
 <div *ngIf="item" class="delete">
-    <h6>Are You Sure,Do you want to delete this account{{item}}</h6>
-    <button class="y">Yes</button> <button class="n">No</button>
+    <h6>Are You Sure,Do you want to delete this account {{item}}</h6>
+
+    <button class="y">Yes</button>
+     <button (click)="Cancel()" class="n">No</button>
 </div>
